feat: up till about:

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,11 @@
-@import "./base.css";
 body {
   background: #282c33;
+  color: #fff;
+  margin: 0;
+  padding: 0;
 }
 #app {
   font-family: "Lato", sans-serif;
+  margin: 0;
+  padding: 0;
 }
